# af3-input

./: .gitignore  README.md  pyproject.toml
af3_input/: colabfold.py  mmseqs.py  plmmsa.py  utils.py
examples/: 1GZX.json  9DAX.json  9EEA.json  multimer.json
