[project]
name = "af3-input"
version = "1.0.0"
description = "AlphaFold 3 input generator"
authors = [{ name = "Minsoo Kim", email = "vv137.xyz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[project.urls]
Homepage = "https://deepfold.org"
Repository = "https://github.com/DeepFoldProtein/af3-input"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ["pre-commit"]
lint = ["ruff"]

[project.scripts]
af3-plmmsa = "af3_input.plmmsa:main"
af3-mmseqs = "af3_input.mmseqs:main"


[tool.ruff]
line-length = 119

# Exclude the following files and directories.
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "env",
    "venv",
]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E402"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
